doc: get single donation, get all user donations
