# src/routes/donation.routes.ts
@@ -1,5 +1,5 @@
 import express from "express";
-import { handleVerifyMetaMask, handleCreateDonation } from "../controllers";
+import { handleCreateDonation, handleGetAllDonations } from "../controllers";
 import { jwtHelper } from "../helpers/jwt/jwt.helper";
 
 const donationRoutes = express.Router();
@@ -9,5 +9,11 @@ donationRoutes.post(
   jwtHelper.requirePermission(),
   handleCreateDonation
 );
+
+donationRoutes.get("/", handleGetAllDonations);
+
+donationRoutes.get("/donation/:donationId");
+
+donationRoutes.get("/me");
 
 export default donationRoutes;
